<resources>
    <string name="app_name">ME PIN</string>
    <string name="loginpage">LOGIN</string>
    <string name="loginbtn">LOGIN</string>
    <string name="registerpage">REGISTER</string>
    <string name="registerbtn">REGISTER</string>
    <string name="username">Username</string>
    <string name="usernamehint">Enter Username Here</string>
    <string name="password">Password</string>
    <string name="passwordhint">Enter Password Here</string>
    <string name="fname">Firstname</string>
    <string name="fnamehint">Enter Firstname Here</string>
    <string name="lname">Lastname</string>
    <string name="lnamehint">Enter Lastname Here</string>
    <string name="phone">Phonenumber</string>
    <string name="phonehint">Enter Phonenumber Here</string>
    <string name="email">Email Address</string>
    <string name="emailhint">Enter Email Address Here</string>
    <string name="idnumber">ID Number</string>
    <string name="idnumberhint">Enter ID Number Here</string>
    <string name="forgotpasswd">Forgot Password</string>
    <string name="clearbtn">CLEAR</string>
    <string name="getpass">GET PASSWORD</string>
    <string name="myprofile">Profile</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_addbiz">Add Business</string>
    <string name="menu_lipanampesa">Lipa Na Mpesa</string>
    <string name="menu_transactions">Transactions</string>
    <string name="search">Search Transactions</string>
    <string name="logout">Log Out</string>

    <string name="tab_text_1">PROFILE</string>
    <string name="tab_text_2">TRANSACTIONS</string>
    <string name="businesspage">ADD BUSINESS</string>
    <string name="addbiz">CREATE BUSINESS</string>
    <string name="shortcode">Paybill No.</string>
    <string name="shortcodehint">Enter Paybill No. Here</string>
    <string name="business">Business Name</string>
    <string name="businesshint">Enter Business Name Here</string>
    <string name="businesslocation">Business Location</string>
    <string name="businesslocationhint">Enter Business Location Here</string>
    <string name="stkpush">Lipa Na Mpesa</string>
    <string name="push">Push Transaction</string>
    <string name="amount">Amount</string>
    <string name="amounthint">Enter Amount Here</string>
    <string name="description">Description</string>
    <string name="descriptionhint">Enter Description Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewresult">Lipa Result</string>
    <string name="mpesareceiptno">MPESA Receipt Number</string>
    <string name="close">CLOSE</string>
    <string name="resultdesc">Result Description</string>
    <string name="response">Response</string>
    <string name="merchantid">Merchant ID</string>
</resources>
