<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_addbiz" />
        <item
            android:id="@+id/nav_lipanampesa"
            android:title="@string/menu_lipanampesa" />
        <item
            android:id="@+id/nav_transactions"
            android:title="@string/menu_transactions" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/search" />
<!--        <item-->
<!--            android:id="@+id/logout"-->
<!--            android:title="@string/search"-->
<!--            />-->
    </group>

</menu>
