<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerpage"
                android:textSize="30dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fname"
                android:textSize="20dp"
                android:textStyle="normal"
                android:layout_marginBottom="5dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fname"
                android:hint="@string/fnamehint"
                android:inputType="text"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lname"
                android:textSize="20dp"
                android:textStyle="normal"
                android:layout_marginBottom="5dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lname"
                android:hint="@string/lnamehint"
                android:inputType="text"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20dp"
                android:textStyle="normal"
                android:layout_marginBottom="5dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/emailhint"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20dp"
                android:textStyle="normal"
                android:layout_marginBottom="5dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:hint="@string/passwordhint"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="20dp"
                android:textStyle="normal"
                android:layout_marginBottom="5dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone"
                android:hint="@string/phonehint"
                android:inputType="number"
                android:layout_marginBottom="10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/registerbtn"
                    android:text="@string/registerbtn"
                    android:background="@color/submitbtn"
                    android:textStyle="bold"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/clearbtn"
                    android:text="@string/clearbtn"
                    android:textStyle="bold"
                    android:background="@color/signup"
                    android:layout_marginBottom="10dp"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>