<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addbiz"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/business"
            android:textSize="20dp"
            android:textStyle="normal"
            android:layout_marginBottom="5dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/businessname"
            android:hint="@string/businesshint"
            android:inputType="text"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/businesslocation"
            android:textSize="20dp"
            android:textStyle="normal"
            android:layout_marginBottom="5dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/location"
            android:hint="@string/businesslocationhint"
            android:inputType="text"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shortcode"
            android:textSize="20dp"
            android:textStyle="normal"
            android:layout_marginBottom="5dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shortcode"
            android:hint="@string/shortcodehint"
            android:inputType="number"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:id="@+id/addbiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/submitbtn"
            android:text="@string/addbiz"
            android:layout_marginBottom="15dp"
            />

</LinearLayout>