<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_addbiz"
        tools:layout="@layout/fragment_business" />

    <fragment
        android:id="@+id/nav_lipanampesa"
        android:name="com.example.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_lipanampesa"
        tools:layout="@layout/fragment_lipanampesa" />

    <fragment
        android:id="@+id/nav_transactions"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_transactions"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.myapplication.ui.tools.ToolsFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

</navigation>