<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stkpush"
                android:textSize="20dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="20dp"
                android:textStyle="normal"
                android:layout_marginBottom="5dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phoneno"
                android:hint="@string/phonehint"
                android:inputType="number"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="20dp"
                android:textStyle="normal"
                android:layout_marginBottom="5dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/amount"
                android:hint="@string/amounthint"
                android:inputType="number"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="20dp"
                android:textStyle="normal"
                android:layout_marginBottom="5dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:hint="@string/descriptionhint"
                android:inputType="text"
                android:layout_marginBottom="10dp"
                />

            <Button
                android:id="@+id/pushstk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/submitbtn"
                android:text="@string/push"
                android:layout_marginBottom="15dp"
                />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>