<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgotpasswd"
                android:textSize="30dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20dp"
                android:textStyle="normal"
                android:layout_marginBottom="5dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/emailhint"
                android:layout_marginBottom="10dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/getpassbtn"
                android:text="@string/getpass"
                android:textStyle="bold"
                android:background="@color/submitbtn"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>